src/App.css
* {
  margin: 0;
  padding: 0;
}

html {
  width: 100vw;
  height: 100vh;
}

.App {
  text-align: center;
}

.headerBanner {
  width: 100vw;
  height: 40px;
  background: linear-gradient(to right, #79a5ea, #300c1b);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

h1 {
  font-size: 25px;
  margin: 0;
  margin-left: 20px;
  color: white;
  font-weight: 50;
  font-family: "Pacifico", cursive;
}

.cloneLogo {
  height: 30px;
  width: 30px;
  background-color: white;
  display: flex;
  flex-direction: row;
  border-radius: 5px;
}
.logoBar {
  flex: 1;
  margin: 2px;
  background-color: #300c1b;
  border-radius: 2px;
}

#bar2 {
  height: 20px;
}
#bar3 {
  height: 10px;
}

#project {
  justify-content: flex-start;
  background: transparent;
}

.projectTitleText {
  font-size: 25px;
  font-family: "Nunito Sans", sans-serif;
  margin-left: 20px;
}

.mainContainerBody {
  width: 100vw;
  height: 740px;
  background-color: #fafafa;
  display: flex;
  justify-content: flex-start;
  padding-left: 30px;
}

.ColumnForList {
  margin-top: 10px;
  width: 270px;
  height: 800px;
  /* background-color: rgba(121, 165, 234, 0.2); */
}

.AddListContainer {
  border-radius: 5px;
  background-color: rgba(121, 165, 234, 0.2);
  margin: 5px;
  height: 40px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  cursor: pointer;
}

.AddListContainer:hover {
  background-color: rgba(121, 165, 234, 0.5);
}

.AddListText {
  font-family: "Nunito Sans", sans-serif;
  margin-left: 10px;
  color: white;
}

.AddListContainer:hover .AddListText {
  color: #300c1b;
}

.AddInputBox {
  border: solid;
  border-width: thin;
  border-color: #79a5ea;
  border-radius: 5px;
  background-color: rgba(121, 165, 234, 0.2);
  margin: 5px;
  height: 40px;
  width: 255px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.AddListInputContainer {
  /* width: 300px; */
  /* height: 95px; */
  border-radius: 6px;
  background-color: rgba(121, 165, 234, 0.2);
  overflow: auto;
}

.AddListInput {
  border: none;
  margin: 10px;
  background-color: transparent;
  height: 30px;
  width: 230px;
  font-family: "Nunito Sans", sans-serif;
  font-size: 15px;
  margin-left: 10px;
  color: #300c1b;
}

.AddListInput::placeholder {
  color: white;
}

.AddListInput:focus .AddInputBox {
  border-color: white;
}

.InputListButtonContainer {
  width: 35px;
  height: 35px;
  border: solid;
  border-width: thin;
  border-radius: 3px;
  border-color: rgba(121, 165, 234, 0.2);
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 10px;
  cursor: pointer;
  margin-bottom: 5px;
}

input {
  outline: none;
  margin: 0 !important;
}
.InputListButtonContainer:hover {
  background-color: rgba(121, 165, 234, 0.5);
  border-color: #ffffff;
}

.InputListButtonText {
  font-size: 30px;
  margin-bottom: 5px;
  color: rgb(121, 165, 234);
}

.InputListButtonContainer:hover .InputListButtonText {
  color: #ffffff;
}

.ListContainer {
  overflow: auto;
  /* width: 300px; */
  /* height: 95px; */
  background-color: rgba(121, 165, 234, 0.2);
  border-radius: 6px;
}

.ListTitleContainer {
  height: 40px;
  margin: 10px;
  margin-top: 5px;
  border-radius: 6px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.ListTitle {
  margin-left: 15px;
  font-size: 17px;
  color: #300c1b;
  font-family: "Nunito Sans", sans-serif;
  font-weight: bold;
}

.RemoveButtonContainer {
  width: 20px;
  height: 20px;
  border: solid;
  border-width: thin;
  border-radius: 3px;
  border-color: rgba(121, 165, 234, 0.2);
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 10px;
  cursor: pointer;
}
.RemoveButtonContainer:hover .RemoveButtonSymbol {
  color: #ffffff;
}

.RemoveButtonContainer:hover {
  border-color: #ffffff;
}

.RemoveButtonSymbol {
  font-size: 20px;
  color: rgb(121, 165, 234);
}

.AddACardContainer {
  /* width: 300px; */
  height: 40px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  cursor: pointer;
}
.AddACardContainer:hover {
  background-color: rgba(121, 165, 234, 0.5);
}

.AddACardContainer:hover .AddACardtext {
  color: white;
}
.AddACardtext {
  margin-left: 10px;
  color: #300c1b;
  font-size: 15px;
  font-family: "Nunito Sans", sans-serif;
}

.CardInputBoxContainer {
  height: 75px;
  /* background-color: lightblue; */
  display: flex;
  justify-content: center;
  overflow: visible;
}

.ListCardDetails {
  width: 250px;
  height: 65px;
  margin-top: 5px;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  border-radius: 6px;
}

.ListCardDetailsInput {
  outline: none;
  border: none;
  width: 230px;
  height: 30px;
  background-color: white;
  font-size: 15px;
  overflow: hidden;
  word-wrap: break-word;
  resize: none;
  height: 54px;
}

.CardItemContainer {
  /* display: flex;
  justify-content: center; */
}

.CardItem {
  margin: 10px;
  padding: 10px;
  background-color: white;
  border-radius: 6px;
  display: flex;
  justify-content: flex-start;
}
.CardItemText {
  font-size: 15px;
  color: black;
  text-align: left;
}

